ajout de la fonctionalité rechercher et debut du burger menu

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
@@ -6,7 +6,7 @@
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>O'clock - Spe React modele</title>
+    <title>Dinoto Encyclopédie</title>
   </head>
   <body>
     <div id="root"></div>
