--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Dinoto-Web est un site web démonstratif qui consomme l'API Dinoto pour présenter les fonctionnalités et les données disponibles dans l'API. L'API Dinoto offre des informations sur les dinosaures, et ce site web a été créé dans le but de mettre en avant ces données de manière conviviale."
+    />
     <link rel="icon" href="/favicon.ico" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
